--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 欢迎重构或pr，不太欢迎issue，除非有重大bug
 请勿滥用本服务！请勿滥用本服务！请勿滥用本服务！【众说三】
 本服务服务端程序无任何防止恶意使用的逻辑，因此切勿使用本服务做DDoS或者getshell之类的实验！！！
-我相信你是好心人。??😉
+我相信你是好心人。😉
 https://github.com/Alan-Liang/farewell
 Author: Alan-Liang
 广告：欢迎加入客页工作室
