--- a/custom/index.html
+++ b/custom/index.html
@@ -139,7 +139,7 @@ html,body{
 <script language="x/template" id="template-result">
 <h6 class="mdc-typography--subtitle1">提交成功！</h6>
 <h6 class="mdc-typography--subtitle1">请记住您的订单号：{{id}}</h6>
-<h6 class="mdc-typography--subtitle1">请向我付款。黑白一张0.1元，彩色一张1元。</h6>
+<h6 class="mdc-typography--subtitle1">请向我付款。黑白一张0.1元，彩色一张1元。付款时务必备注订单号。</h6>
 </script>
 
 <script language="x/template" id="template-select">
