--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Ta是{{child}}的{{relation}}。
 </div>
 
 <div id="final" class="align-center width-100">
-<h6 class="mdc-typography--subtitle1">重要！如果您以前提交过图片，但是想修改，请务必打16个回车然后输入之前的订单号。谢谢！</h6>
+<h6 class="mdc-typography--subtitle1">重要！如果您以前提交过图片，但是想修改，请务必在留言后打16个回车然后输入之前的订单号。谢谢！</h6>
 <div class="align-left a b c d mdc-text-field mdc-text-field--textarea width-90" data-mdc-auto-init="MDCTextField">
   <textarea id="says" class="mdc-text-field__input"></textarea>
   <label for="says" class="mdc-floating-label">您有什么想对我说的吗？</label>
