--- a/pub/index.html
+++ b/pub/index.html
@@ -13,9 +13,12 @@ Author: Alan-Liang
 邮件至a艾特1e100点tk来联系我。
 -->
 <head>
+<script>
+var POSTADDR="https://huginn-keeer-huginn.193b.starter-ca-central-1.openshiftapps.com/users/3/web_requests/38/hi";
+</script>
 <title>Farewell</title>
-<meta name="viewport" content="width=390" />
-<link href="./mdc.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="width=384" />
+<link href="../mdc.css" rel="stylesheet" type="text/css" />
 <style>
 /* commons */
 .width-100{
@@ -56,7 +59,7 @@ body{
 	margin:0;
 }
 html,body{
-	width:390px;
+	width:382px;
 	height:100%;
 }
 #header-pad{
@@ -75,14 +78,14 @@ html,body{
 }
 #sign-canvas{
 	border:1px solid #000;
-	margin-left:20px;
-	margin-right:20px;
+	margin-left:16px;
+	margin-right:16px;
 	width:350px;
 	height:140px;
 }
 #sign{
 	display:none;
-	width:390px;
+	width:382px;
 }
 #styles{
 	display:none;
@@ -139,10 +142,12 @@ html,body{
 <script language="x/template" id="template-result">
 <h6 class="mdc-typography--subtitle1">提交成功！</h6>
 <h6 class="mdc-typography--subtitle1">
-如果您以后可能再更改任何内容，请记住这个订单号：{{id}}
+请记住您的订单号：{{id}}
 <button class="mdc-button" onclick="copy(&quot;{{id}}&quot;)" data-mdc-auto-init="MDCRipple">复制</button>
 </h6>
+<h6 class="mdc-typography--subtitle1">请向我付款。黑白一张0.1元，彩色一张1元。付款时务必备注订单号。</h6>
 </script>
+
 <script language="x/template" id="template-checkbox">
 <div class="mdc-form-field">
   <div class="mdc-checkbox" data-mdc-auto-init="MDCCheckbox">
@@ -162,37 +167,15 @@ html,body{
   <label for="{{id}}">{{text}}</label>
 </div>
 </script>
+
 <script language="x/template" id="template-select">
     <option value="{{value}}">{{text}}</option>
 </script>
-<script language="x/template" id="template-text">
-
-姓名：{{name}}
-班级：{{itsClass}}
-外号有：{{nicks}}
-Ta{{study}}学魔。
-我叫Ta【{{nick}}】
-Ta叫我【{{mynick}}】
-微信：{{wechat}}
-手机：{{phone}}
-Ta能回忆起我：
-{{plot}}
-
-Ta是一位我尊敬的老师。
-Ta从{{begin}}到{{end}}期间，
-教我的{{subject}}。
-在Ta的印象中，我是这样的：
-{{timpact}}
-
-Ta是{{child}}的{{relation}}。
-在Ta的印象中，我是这样的：
-{{impact}}
-
-</script>
+<script language="x/template" id="template-text"></script>
 <!--script type="text/javascript" src="https://res.wx.qq.com/mmbizwap/zh_CN/htmledition/js/vconsole/3.0.0/vconsole.min.js"></script-->
 </head>
 <body>
-<script src="./utils.js"></script>
+<script src="../utils.js"></script>
 <div id="info">
 <header class="mdc-top-app-bar mdc-elevation--z5 {{hideAppBar}}" id="appbar" data-mdc-auto-init="MDCTopAppBar">
   <div class="mdc-top-app-bar__row">
@@ -203,68 +186,29 @@ Ta是{{child}}的{{relation}}。
 </header>
 <div id="header-pad" class="{{hideAppBar}}"></div>
 
-<div id="basics">
-<div class="align-center" data-init="radio identity rad-student/同学 rad-teacher/老师 rad-parent/家长">
-<h6 class="mdc-typography--subtitle1">1. 你的身份是？</h6>
-</div>
-
-<div class="align-center">
-<h6 class="mdc-typography--subtitle1">2. 你的名字是？</h6>
-<div data-init="text-field name/姓名"></div>
-<button id="upload-avatar" class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple">上传你的照片</button>
-<img id="preview" />
+<div id="words" class="align-center">
+<div class="align-center" data-init="text-field name/你的姓名 to/想送给的同学的邮箱">
+<h6 class="mdc-typography--subtitle1">请输入…</h6>
+<h6 class="mdc-typography--subtitle1">重要！如果你想覆盖之前的一张已付款图片，请务必在留言后打16个回车然后输入之前订单号！</h6>
 <br />
-<button id="cont1" class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple">继续</button>
 </div>
+<div class="align-left a b c d mdc-text-field mdc-text-field--textarea width-90" data-mdc-auto-init="MDCTextField">
+  <textarea id="text" class="mdc-text-field__input"></textarea>
+  <label for="text" class="mdc-floating-label">左方文字(“文字”)</label>
 </div>
-
-<div id="student">
-<div class="align-center" data-init="select class 班级 4/4 1/1 2/2 3/3 5/5 6/6 7/7 8/8 9/9 10/10 11/11 12/12 13/13 14/14 other/其他年级或班级">
-<h6 class="mdc-typography--subtitle1">你的班级是？(如果不是初三请选其他)</h6>
-</div>
-
-<div class="align-center" data-init=
-"text-field nick/你的印象中我叫你什么？ mynick/你一般叫我什么？ plot/我做过什么令你印象深刻的事？ nicks/你还有什么别名？ wechat/你的微信 phone/你的电话号？">
-<h6 class="mdc-typography--subtitle1">一些个人问题</h6>
-</div>
-<div style="margin-left:5%;" data-init="select study 你是学魔吗？ yes/是的 abs/肯定是 whynot/怎么可能不是呢？"></div>
-</div><!-- end student -->
-
-<div id="teacher">
-<div class="align-center">
-<h6 class="mdc-typography--subtitle1">关于您</h6>
-<div data-init="text-field subject/您教的科目是？"></div>
-<div data-init="select begin 您从… 初一/初中一年级 初二/初中二年级 初三/初中三年级"></div>
-<div data-init="select end 教到… 初二/初中二年级 初三/初中三年级"></div>
-</div>
-
-<div class="align-center" data-init="text-field timpact/您对我的印象是…">
-<h6 class="mdc-typography--subtitle1">关于我</h6>
-</div>
-</div>
-
-<div id="parent">
-<div class="align-center" data-init="text-field child/您的孩子是？ relation/您是孩子的…">
-<h6 class="mdc-typography--subtitle1">关于您的孩子</h6>
-</div>
-<div class="align-center" data-init="text-field impact/您平时对我的印象是什么？">
-<h6 class="mdc-typography--subtitle1">关于我</h6>
-</div>
-</div>
-
-<div id="final" class="align-center width-100">
-<h6 class="mdc-typography--subtitle1">重要！如果您以前提交过图片，但是想修改，请务必在留言后打16个回车然后输入之前的订单号。谢谢！</h6>
 <div class="align-left a b c d mdc-text-field mdc-text-field--textarea width-90" data-mdc-auto-init="MDCTextField">
   <textarea id="says" class="mdc-text-field__input"></textarea>
-  <label for="says" class="mdc-floating-label">您有什么想对我说的吗？</label>
+  <label for="says" class="mdc-floating-label">下方文字(“留言”)</label>
 </div>
+<button id="upload-avatar" class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple">上传你的照片</button>
+<img id="preview" />
 <button id="cont2" class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple">继续</button>
 </div>
 
 <div id="sign" class="align-center">
 <h6 class="mdc-typography--subtitle1">签名</h6>
 <h6 class="mdc-typography--subtitle2">您可以将屏幕横向旋转</h6>
-<canvas id="sign-canvas" width="700px" height="280px"></canvas>
+<canvas id="sign-canvas" width="350px" height="140px"></canvas>
 <button id="clear" class="mdc-button" data-mdc-auto-init="MDCRipple">清除</button>
 <button id="undo" class="mdc-button" data-mdc-auto-init="MDCRipple">撤销</button>
 <br />
@@ -276,8 +220,6 @@ Ta是{{child}}的{{relation}}。
 <h6 class="mdc-typography--subtitle1">选择边框样式</h6>
 <ul class="mdc-image-list" id="bg-list"></ul>
 <div data-init="select bg 边框 sel/请点击图片 1/1(53.8kB) 2/2(610.9kB) 3/3(914.1kB) 4/4(56.2kB) 5/5(74.9kB) 6/6(202.1kB) 7/7(1.1MB)"></div>
-<h6 class="mdc-typography--subtitle1">选项</h6>
-<div data-init="checkbox jpeg/有损压缩(降低品质，节省流量)"></div>
 <h6 class="mdc-typography--subtitle1">选择背景颜色</h6>
 <input id="color-bg" class="width-90" type="color" value="#ffffff" />
 <h6 class="mdc-typography--subtitle1">选择姓名颜色</h6>
@@ -310,14 +252,13 @@ Ta是{{child}}的{{relation}}。
 <div id="controls"></div>
 </div>
 
-<script src="./init.js"></script>
-<script src="./signpad.js"></script>
+<script src="../init.js"></script>
+<script src="../signpad.js"></script>
 <script>
 var ua=navigator.userAgent;
 if((/micromess/i).test(ua)){ //微型混乱
-	if(!(/wifi/i).test(ua)){
-		alert("本页面可能消耗1-2MB流量，推荐在Wi-Fi网络中访问。");
-	}
+	alert("在微信中使用会出现严重的bug！请在浏览器中打开！");
+	document.body.innerHTML=("<h1>在微信中使用会出现严重的bug！请在浏览器中打开！</h1>");
 }
 //@author Rok Strniša@StackOverflow
 //see https://stackoverflow.com/questions/5026961/html5-canvas-ctx-filltext-wont-do-line-breaks/21574562
@@ -348,7 +289,7 @@ var html="";
 var imglist=$("bg-list");
 var templImglistLi=$("template-imglist-li").innerHTML;
 for(var i=1;i<8;i++){
-	html+=template(templImglistLi,{src:"./background/thumb/"+i+".jpg",id:"bg-li-"+i,i:i});
+	html+=template(templImglistLi,{src:"../background/thumb/"+i+".jpg",id:"bg-li-"+i,i:i});
 }
 imglist.innerHTML=html;
 
@@ -364,54 +305,12 @@ $("image").onchange=function(){
 function isChecked(id){
 	return $(id).parentElement.MDCRadio.checked;
 }
-var identity;
-$("cont1").onclick=function(){
-	if(!$("name").value){
-		$("name").focus();
-		return;
-	}
+$("cont2").onclick=function(){
 	if((!$("image").files||!$("image").files.length)&&(!confirm("你确定不上传照片吗？"))){
 		$("image").click();
 		return;
 	}
-	if(isChecked("rad-student")){
-		$("student").show();
-		identity=1;
-	}else if(isChecked("rad-teacher")){
-		$("teacher").show();
-		identity=2;
-	}else if(isChecked("rad-parent")){
-		$("parent").show();
-		identity=3;
-	}else{
-		return;
-	}
-	$("basics").hide();
-	$("final").show();
-	setTimeout(function(){
-		window.scrollTo(0,0);
-	},10);
-}
-$("cont2").onclick=function(){
-	var fields;
-	switch(identity){
-		case 1: //student
-		fields="name|nick|mynick|plot|nicks|wechat|phone|says".split("|");
-		break;
-		
-		case 2: //teacher
-		fields="name|subject|begin|end|timpact|says".split("|");
-		break;
-		
-		case 3: //parent
-		fields="name|child|relation|impact|says".split("|");
-		break;
-		
-		default: //error
-		alert("发生了一个诡异的错误。请联系我。");
-		return;
-		break;
-	}
+	var fields="name|to|text|says".split("|");
 	var values={};
 	for(var i=0;i<fields.length;i++){
 		var el=$(fields[i]);
@@ -421,29 +320,10 @@ $("cont2").onclick=function(){
 		}
 		values[fields[i]]=el.value;
 	}
-	if(identity==1){ //student
-		var itsClass=$("class").value; //class is reserved
-		if(itsClass=="other"){
-			var res;
-			while(!res){
-				res=prompt("请填写你的班级：","");
-			}
-			itsClass=res;
-		}
-		values.itsClass=itsClass;
-		values.study={
-			yes:"是",
-			abs:"肯定是",
-			whynot:"怎么可能不是"
-		}[$("study").value];
-	}
 	if($("image").files.length)
 		values.avatar=getDataURL($("preview"));
 	window.values=values;
-	$("teacher").hide();
-	$("student").hide();
-	$("parent").hide();
-	$("final").hide();
+	$("words").hide();
 	$("styles").show();
 }
 $("cont4").onclick=function(){
@@ -463,7 +343,6 @@ $("cont3").onclick=function(){
 		return;
 	}
 	var canvas=$("sign-canvas");
-	canvas.getContext("2d").scale(2,2);
 	var signPad=window.signPad=new SignaturePad(canvas,{penColor:$("color-sign").value});	
 	$("clear").onclick=function(){
 		signPad.clear();
@@ -513,7 +392,7 @@ var paint=function(){
 		ctx.fillStyle=$("color-text").value;
 		ctx.textAlign="start";
 		ctx.font="64px Roboto";
-		ctx.wrapText(template(templText[identity],values),128,576,1423,96);
+		ctx.wrapText(values.text,128,576,1423,96);
 		ctx.fillStyle=$("color-says").value;
 		ctx.wrapText(values.says,256,2048,1964,96);
 		if(avatar.ok)
@@ -555,19 +434,17 @@ var paint=function(){
 		//draw completed, move it into image
 		window.onresize=null;
 		var _url;
-		if($("jpeg").checked)
-			_url=canvas.toDataURL("image/jpeg");
-		else _url=canvas.toDataURL();
-		values.image=_url;
+		_url=canvas.toDataURL("image/jpeg");
+		values.image=atob(_url.split(",")[1]);
 		$("final-image").src=_url;
 		$("paint").hide();
 		$("result").show();
 		$("info").show();
 	};
-	img.src="./background/"+$("bg").value+".png";
+	img.src="../background/"+$("bg").value+".png";
 	if($("image").files.length)
 		avatar.src=URL.createObjectURL($("image").files[0]);
-	else avatar.src="./na.png";
+	else avatar.src="../na.png";
 	sig.src=$("sign-canvas").toDataURL();
 };
 $("skip4").onclick=paint;
@@ -585,23 +462,31 @@ window.onresize();
 
 var rccb=function(token){
 	window.token=token;
+	window.values["g-recaptcha-response"]=token;
 	$("submit").removeAttribute("disabled");
 };
 window.__recaptcha_api="https://www.recaptcha.net/recaptcha/";
 $("submit").onclick=function(){
 	$("submit").setAttribute("disabled","true");
-	httppost("upload?token="+encodeURIComponent(window.token),window.values,function(req,resp){
+	httppost(POSTADDR,window.values,function(req,resp){
 		if(req.status==200){//OK
 			$("res-action").hide();
 			$("upload-res").innerHTML=template($("template-result").innerHTML,{id:resp});
+			//mdc.autoInit();
 		}else{//error
+			if(req.status==401){
+				alert("reCAPTCHA发生了问题，请重试。");
+				return;
+			}
+			console.log(req);
+			window.req=req;
 			alert("服务器发生了错误，请稍候再试！"+resp);
 			$("submit").removeAttribute("disabled");
 		}
 	});
 };
 </script>
-<script src="./mdc.js"></script>
+<script src="../mdc.js"></script>
 <script>mdc.autoInit();//var vc=new VConsole();
 </script>
 <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
