--- a/custom/index.html
+++ b/custom/index.html
@@ -14,7 +14,7 @@ Author: Alan-Liang
 -->
 <head>
 <title>Farewell</title>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=390" />
 <link href="../mdc.css" rel="stylesheet" type="text/css" />
 <style>
 /* commons */
@@ -56,7 +56,7 @@ body{
 	margin:0;
 }
 html,body{
-	width:100%;
+	width:390px;
 	height:100%;
 }
 #header-pad{
@@ -75,14 +75,14 @@ html,body{
 }
 #sign-canvas{
 	border:1px solid #000;
-	margin-left:10px;
-	margin-right:10px;
-	width:700px;
-	height:280px;
+	margin-left:20px;
+	margin-right:20px;
+	width:350px;
+	height:140px;
 }
 #sign{
 	display:none;
-	width:720px;
+	width:390px;
 }
 #styles{
 	display:none;
@@ -366,6 +366,7 @@ $("cont3").onclick=function(){
 		return;
 	}
 	var canvas=$("sign-canvas");
+	canvas.getContext("2d").scale(2,2);
 	var signPad=window.signPad=new SignaturePad(canvas,{penColor:$("color-sign").value});	
 	$("clear").onclick=function(){
 		signPad.clear();
